--- a/package.json
+++ b/package.json
@@ -42,16 +42,25 @@
     "url": "https://github.com/knpwrs/redux-saga-selector-channel/issues"
   },
   "homepage": "https://github.com/knpwrs/redux-saga-selector-channel#readme",
+  "dependencies": {
+    "redux-saga": "^0.16.2"
+  },
+  "peerDependencies": {
+    "redux": "^4.0.1",
+    "redux-saga": "^0.16.2"
+  },
   "devDependencies": {
     "@commitlint/cli": "^7.2.1",
     "@commitlint/config-conventional": "^7.1.2",
     "@types/jest": "^23.3.10",
+    "@types/node": "^10.12.12",
     "eslint": "^5.9.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-typescript": "^0.14.0",
     "husky": "^1.2.0",
     "jest": "^23.6.0",
+    "redux": "^4.0.1",
     "rimraf": "^2.6.2",
     "ts-jest": "^23.10.5",
     "typescript": "^3.2.1",
