--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "posttest": "npm run lint",
-    "prepack": "npm run build"
+    "prepack": "npm run build",
+    "release": "np"
   },
   "jest": {
     "testEnvironment": "node",
@@ -60,6 +61,7 @@
     "eslint-plugin-typescript": "^0.14.0",
     "husky": "^1.2.0",
     "jest": "^23.6.0",
+    "np": "^3.0.4",
     "redux": "^4.0.1",
     "rimraf": "^2.6.2",
     "ts-jest": "^23.10.5",
