--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "test:watch": "jest --watch",
     "posttest": "npm run lint",
     "prepack": "npm run build",
-    "release": "np"
+    "release": "np",
+    "release:beta": "np --any-branch --tag beta"
   },
   "jest": {
     "testEnvironment": "node",
