--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redux-saga-selector-channel",
-  "version": "0.1.0",
+  "version": "1.0.0-0",
   "description": "Create a redux-saga channel which updates with changes to a selector function.",
   "module": "dist/index.js",
   "typings": "dist/index.d.ts",
