--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
   },
   "peerDependencies": {
     "redux": "^4.0.1",
-    "redux-saga": "^0.16.2"
+    "redux-saga": "^1.0.0-beta.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^7.2.1",
