--- a/package.json
+++ b/package.json
@@ -55,17 +55,17 @@
     "@commitlint/config-conventional": "^7.1.2",
     "@types/jest": "^24.0.0",
     "@types/node": "^10.12.12",
+    "@typescript-eslint/eslint-plugin": "^1.3.0",
+    "@typescript-eslint/parser": "^1.3.0",
     "eslint": "^5.9.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-typescript": "^0.14.0",
     "husky": "^1.2.0",
     "jest": "^24.1.0",
     "np": "^4.0.2",
     "redux": "^4.0.1",
     "rimraf": "^2.6.2",
     "ts-jest": "^23.10.5",
-    "typescript": "^3.2.1",
-    "typescript-eslint-parser": "^21.0.2"
+    "typescript": "^3.2.1"
   }
 }
